--- a/node-school/package.json
+++ b/node-school/package.json
@@ -11,7 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "concat-stream": "^1.5.0",
+    "duplexer2": "0.0.2",
     "split": "^1.0.0",
+    "stream-combiner": "^0.2.2",
+    "tar": "^2.1.1",
     "through2": "^2.0.0",
     "trumpet": "^1.7.1",
     "websocket-stream": "^1.5.1"
